<resources>
	<string name="app_name">c:geo</string>
	<string name="app_name_compass">c:geo compass</string>
	<string name="maps_api_key">0EqeuoVNDFD9UTi5lJ0cIW9lXaPGf9S15U4jnlg</string>
	<string name="maps_api_key_market">0aqvjxNlVeQ_h3Sfdk2jMTO66naKrxgJsAB-y3Q</string>
	<string name="cache">Cache</string>
	<string name="detail">Detail</string>
	<string name="search">Search</string>
	<string name="settings">Settings</string>
	<string name="about">About c:geo</string>
	<string name="database_error_title">Problem with database</string>
	<string name="database_error_message">c:geo failed to connect to internal database.\nPlease try to start c:geo a bit later. If this message has been showed for many times, proceed to phone Settings / Applications / c:geo and hit the Clear Data button. Or uninstall and install c:geo again. Sorry for inconvenience.</string>
	<string name="action_bar_share_title">Share link to cache</string>
	<string name="all">All caches</string>
	<string name="all_types">All cache types</string>
	<string name="traditional">Traditional cache</string>
	<string name="multi">Multi-cache</string>
	<string name="mystery">Unknown cache</string>
	<string name="letterbox">Letterbox hybrid</string>
	<string name="event">Event cache</string>
	<string name="mega">Mega-event cache</string>
	<string name="earth">Earthcache</string>
	<string name="cito">Cache in trash out event</string>
	<string name="webcam">Webcam cache</string>
	<string name="virtual">Virtual cache</string>
	<string name="wherigo">Wherigo cache</string>
	<string name="lostfound">Lost &amp; found</string>
	<string name="ape">Project ape cache</string>
	<string name="gchq">Groundspeak hq</string>
	<string name="gps">GPS cache exhibit</string>
	<string name="wp_final">Final location</string>
	<string name="wp_stage">Stage of multi-cache</string>
	<string name="wp_puzzle">Question for answer</string>
	<string name="wp_pkg">Parking area</string>
	<string name="wp_trailhead">Trailhead</string>
	<string name="wp_waypoint">Reference point</string>
	<string name="log_found">Found</string>
	<string name="log_dnf">Did not find</string>
	<string name="log_note">Note</string>
	<string name="log_published">Published</string>
	<string name="log_enabled">Enabled</string>
	<string name="log_disabled">Disabled</string>
	<string name="log_attend">Will attend</string>
	<string name="log_attended">Attended</string>
	<string name="log_retrieved">Retrieved</string>
	<string name="log_placed">Placed</string>
	<string name="log_grabbed">Grabbed somewhere</string>
	<string name="log_maintained">Maintenance performed</string>
	<string name="log_maintenance_needed">Needs maintenance</string>
	<string name="log_maintenance_owner">Maintenance</string>
	<string name="log_update">Updated coordinates</string>
	<string name="log_archived">Archived</string>
	<string name="log_needs_archived">Needs archived</string>
	<string name="log_discovered">Discovered</string>
	<string name="log_reviewed">Reviewer note</string>
	<string name="log_taken">Visit</string>
	<string name="log_tb_nothing">Do nothing</string>
	<string name="log_tb_visit">Visit</string>
	<string name="log_tb_drop">Drop here</string>
	<string name="log_tb_changeall">Change all</string>
	<string name="log_save">Save</string>
	<string name="log_saving">Saving log...</string>
	<string name="log_clear">Clear</string>
	<string name="log_post">Post log</string>
	<string name="log_add">Add</string>
	<string name="log_date">Date</string>
	<string name="log_time">Time</string>
	<string name="log_date_time">Date &amp; time</string>
	<string name="log_webcam">Webcam photo taken</string>
	<string name="log_new_log">Log</string>
	<string name="log_new_log_text">Log text</string>
	<string name="log_announcement">Announcement</string>
	<string name="err_none">Ok</string>
	<string name="err_start">Communication not started</string>
	<string name="err_parse">Failed login page parsing</string>
	<string name="err_server">Failed connection to geocaching.com (server or connection down?)</string>
	<string name="err_login">No login information stored</string>
	<string name="err_login_failed">Sorry, c:geo can\'t login.</string>
	<string name="err_unknown">Unknown error</string>
	<string name="err_comm">Unknown communication error</string>
	<string name="err_missing_auth">No username and/or password set.</string>
	<string name="err_wrong">Wrong login informations</string>
	<string name="err_license">User has not agreed to Geocaching.com license agreement, so c:geo can\'t load caches coordinates.</string>
	<string name="err_store">Sorry, c:geo can\'t store cache.</string>
	<string name="err_drop">Sorry, c:geo can\'t drop cache.</string>
	<string name="err_title_problem">Problem</string>
	<string name="err_detail_open">Sorry, c:geo can\'t open geocache details.</string>
	<string name="err_detail_cache">Sorry, c:geo can\'t display geocache you want. Is it really geocache?</string>
	<string name="err_detail_cache_find">Sorry, c:geo can\'t find geocache</string>
	<string name="err_detail_cache_find_some">Sorry, c:geo can\'t find that geocache.</string>
	<string name="err_detail_cache_find_any">Sorry, c:geo can\'t find any geocache.</string>
	<string name="err_detail_cache_find_next">Sorry, c:geo can\'t find next geocaches.</string>
	<string name="err_detail_cache_forgot">Sorry, c:geo forgot which geocache you want.</string>
	<string name="err_detail_cache_forgot_visit">Sorry, c:geo forgot which cache you visited.</string>
	<string name="err_detail_cache_language">c:geo can\'t read some cache details. Please check if the geocaching.com website is set to English. Unfortunately, c:geo doesn\'t understand other localisations.</string>
	<string name="err_detail_no_spoiler">c:geo found no spoiler images for this cache.</string>
	<string name="err_detail_no_map_static">c:geo found no static maps for this cache.</string>
	<string name="err_detail_not_load_map_static">Sorry, c:geo failed to load static maps.</string>
	<string name="err_detail_still_removing">Still removing this cache.</string>
	<string name="err_detail_still_saving">Still saving this cache.</string>
	<string name="err_detail_still_refreshing">Still reloading this cache.</string>
	<string name="err_radar_title">Radar isn\'t installed.</string>
	<string name="err_radar_message">This function requires Radar application. Should it be installed?</string>
	<string name="err_radar_market">c:geo can\'t start Android Market to search for Radar application.</string>
	<string name="err_radar_generic">Sorry, c:geo can\'t start Radar application. Is it installed?</string>
	<string name="err_navigation_no">c:geo can\'t find any supported navigation.</string>
	<string name="err_application_no">c:geo can\'t find any suitable application.</string>
	<string name="err_auth_initialize">Sorry, c:geo failed to initialize authorization process.</string>
	<string name="err_auth_process">Authorization process failed.</string>
	<string name="err_cannot_log_visit">c:geo has not enough information to log visit. Please, do it from full cache details.</string>
	<string name="err_init_cleared">Sorry, c:geo can\'t clear login information.</string>
	<string name="err_no_chaches">Sorry, c:geo failed to load cache or caches.</string>
	<string name="err_download_fail">Sorry, c:geo failed to download caches because of </string>
	<string name="err_update_fail">Failed to update traveled distance.</string>
	<string name="err_list_load_fail">Sorry, c:geo failed to load cache list.</string>
	<string name="err_store_failed">Sorry, c:geo can\'t store geocache.</string>
	<string name="err_refresh_failed">Sorry, c:geo can\'t refresh geocache.</string>
	<string name="err_drop_failed">Sorry, c:geo can\'t drop geocache.</string>
	<string name="err_dwld_details_failed">Sorry, c:geo failed to download cache details.</string>
	<string name="err_dwld_details_failed_reason">Sorry, c:geo failed to download cache details because of</string>
	<string name="err_load_descr_failed">Sorry, c:geo can\'t load description.</string>
	<string name="err_location_unknown">c:geo doesn\'t know location of cache.</string>
	<string name="err_manual_title">Manual isn\'t installed.</string>
	<string name="err_manual_message">Manual for c:geo is not present in your device. Should it be installed?</string>
	<string name="err_manual_market">c:geo can\'t start Android Market to search for Manual of c:geo.</string>
	<string name="err_tb_display">"Sorry, c:geo can\'t display trackable you want. Is it really trackable?</string>
	<string name="err_tb_details_open">Sorry, c:geo can\'t open trackable details.</string>
	<string name="err_tb_details_download">Sorry, c:geo failed to download trackable details because of</string>
	<string name="err_tb_forgot">Sorry, c:geo forgot which trackable you want.</string>
	<string name="err_tb_forgot_saw">Sorry, c:geo forgot which trackable you saw.</string>
	<string name="err_tb_find">Sorry, c:geo can\'t find trackable</string>
	<string name="err_tb_find_that">Sorry, c:geo can\'t find that trackable.</string>
	<string name="err_waypoint_cache_unknown">Sorry, c:geo doesn\'t know to which cache you want to add waypoint.</string>
	<string name="err_waypoint_unknown">Sorry, c:geo forgot what waypoint you want to display.</string>
	<string name="err_waypoint_add_failed">Sorry, c:geo failed to add your waypoint.</string>
	<string name="err_waypoint_load_failed">Sorry, c:geo failed to load waypoint.</string>
	<string name="err_waypoint_delete_failed">Sorry, c:geo can\'t delete waypoint.</string>
	<string name="err_point_unknown_position">Sorry, c:geo can\'t recognize where you are.</string>
	<string name="err_point_no_position_given_title">Info required</string>
	<string name="err_point_no_position_given">Fill at least latitude or longitude or distance and bearing. You can also fill all four fields.</string>
	<string name="err_point_curr_position_unavailable">c:geo still doesn\'t have current coordinates. Please, wait a while...</string>
	<string name="err_point_bear_and_dist_title">Need some help?</string>
	<string name="err_point_bear_and_dist">Fill both bearing and distance. Bearing is angle 0 to 360 degrees relative to north. Distance with or without units.</string>
	<string name="err_point_location_error">Sorry, c:geo can\'t get location of waypoint.</string>
	<string name="err_navigation_not_found">c:geo can\'t find any supported navigation.</string>
	<string name="err_log_load_data">Sorry, c:geo can\'t load data required to log visit.</string>
	<string name="err_log_load_data_again">Sorry, c:geo can\'t load data required to log visit. Trying again.</string>
	<string name="err_log_load_data_still">c:geo is still loading data required to post log. Please wait a little while longer.</string>
	<string name="err_log_failed_server">Sorry, c:geo failed to post log because server is not responding.</string>
	<string name="err_log_post_failed">It seems that your log was not posted. Please check it on geocaching.com.</string>
	<string name="err_log_post_failed_because">Sorry, c:geo failed to post log because of </string>
	<string name="err_search_address_no_match">Sorry, c:geo found no matching place.</string>
	<string name="err_search_address_forgot">Sorry, c:geo forgot address you try to find.</string>
	<string name="err_search_address">Searching for places</string>
	<string name="err_parse_lat">Sorry, c:geo can\'t parse latitude.</string>
	<string name="err_parse_lon">Sorry, c:geo can\'t parse longitude.</string>
	<string name="err_parse_bear">Sorry, c:geo can\'t parse bearing.</string>
	<string name="about_version">Version</string>
	<string name="cache_offline">Offline</string>
	<string name="cache_offline_refresh">Refresh</string>
	<string name="cache_offline_store">Store</string>
	<string name="cache_hint">Hint</string>
	<string name="quote">To make geocaching easier, to make users lazier.</string>
	<string name="powered_by">carnero</string>
</resources>