<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/details_list_box"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:padding="4dip"
		android:orientation="vertical" >
	<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical" >
		<!-- map preview -->
		<ImageView android:id="@+id/map_preview"
				android:visibility="gone"
				android:layout_width="fill_parent"
				android:layout_height="80dip"
				android:layout_gravity="center"
				android:layout_marginBottom="5dip"
				android:gravity="center"
				android:scaleType="centerCrop"
				android:src="@null" />

		<!-- cache details -->
		<LinearLayout android:id="@+id/details_list"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical" >
		</LinearLayout>

		<!-- hint -->
		<LinearLayout android:id="@+id/hint_box"
				android:visibility="gone"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"  >
			<RelativeLayout style="@style/separator_horizontal_layout" >
				<View style="@style/separator_horizontal" />
				<TextView style="@style/separator_horizontal_headline"
						android:text="@string/cache_hint" />
			</RelativeLayout>
			<TextView android:id="@+id/hint"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="left"
					android:padding="3dip"
					android:textSize="14dip"
					android:textColor="?text_color"
					android:linksClickable="true"
					android:textColorLink="?text_color_link" />
		</LinearLayout>

		<!-- offline -->
		<LinearLayout android:id="@+id/offline_box"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"  >
			<RelativeLayout style="@style/separator_horizontal_layout" >
				<View style="@style/separator_horizontal" />
				<TextView style="@style/separator_horizontal_headline"
						android:text="@string/cache_offline" />
			</RelativeLayout>
			<RelativeLayout
					android:layout_width="fill_parent"
					android:layout_height="wrap_content" >
				<TextView android:id="@+id/offline_text"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:layout_marginLeft="6dip"
						android:layout_marginRight="130dip"
						android:layout_alignParentLeft="true"
						android:layout_gravity="left"
						android:paddingRight="3dip"
						android:textSize="14dip"
						android:textColor="?text_color" />
				<Button style="@style/button_small"
						android:id="@+id/offline_refresh"
						android:visibility="gone"
						android:layout_width="60dip"
						android:layout_marginRight="71dip"
						android:layout_alignParentRight="true"
						android:text="@string/cache_offline_refresh" />
				<Button style="@style/button_small"
						android:id="@+id/offline_store"
						android:layout_width="60dip"
						android:layout_alignParentRight="true"
						android:text="@string/cache_offline_store" />
			</RelativeLayout>
		</LinearLayout>
	</LinearLayout>
</ScrollView>