<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		android:background="?background_color" >
	<LinearLayout style="@style/action_bar">
		<ImageView style="@style/action_bar_action"
				android:onClick="goHome" />
		<View style="@style/action_bar_separator" />
		<TextView style="@style/action_bar_title" />
	</LinearLayout>
	<ScrollView
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:padding="4dip"
			android:orientation="vertical" >
		<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:layout_marginTop="10dip"
				android:orientation="vertical" >
			<LinearLayout
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:layout_marginTop="10dip"
					android:orientation="vertical" >
				<ImageView
						android:layout_width="200dip"
						android:layout_height="200dip"
						android:layout_margin="10dip"
						android:layout_gravity="center"
						android:gravity="center"
						android:scaleType="fitXY"
						android:src="@drawable/carnero_logo" />
				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginLeft="10dip"
						android:layout_marginRight="10dip"
						android:layout_marginTop="5dip"
						android:layout_alignParentLeft="true"
						android:layout_gravity="left"
						android:textSize="14dip"
						android:textColor="?text_color"
						android:text="@string/quote" />
				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginLeft="10dip"
						android:layout_marginRight="10dip"
						android:layout_marginBottom="5dip"
						android:layout_alignParentRight="true"
						android:layout_gravity="right"
						android:textSize="14dip"
						android:textColor="?text_color"
						android:text="@string/powered_by" />
			</LinearLayout>
			<RelativeLayout style="@style/separator_horizontal_layout" >
				<View style="@style/separator_horizontal" />
				<TextView style="@style/separator_horizontal_headline"
						android:text="@string/about_version" />
			</RelativeLayout>
			<TextView android:id="@+id/version"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dip"
					android:layout_marginRight="10dip"
					android:layout_marginTop="5dip"
					android:layout_alignParentLeft="true"
					android:layout_gravity="left"
					android:textSize="14dip"
					android:textColor="?text_color"
					android:text="@null" />
		</LinearLayout>
	</ScrollView>
</LinearLayout>
